# Rokio

./: BUILD.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOY_SUMMARY.md  README.md  package-lock.json  package.json
.github/: RELEASE_BODY.md
.github/workflows/: build.yml  release.yml
scripts/: release.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: browser_login.rs  client.rs  cookies.rs  crypto.rs  environment.rs  game_detection.rs  groups.rs  launcher.rs  lib.rs  main.rs  process_utils.rs  profiles.rs  quick_login.rs  roblox.rs  settings.rs  utils.rs  vault.rs  watcher.rs
src-tauri/src/binarycookies/: binarycookies.rs  cookie.rs  mod.rs  page.rs  utils.rs
src/lib/: types.ts
src/lib/components/: AccountCard.svelte  AccountInfoModal.svelte  AccountRow.svelte  AddAccountModal.svelte  BrowserLoginModal.svelte  EditAccountModal.svelte  FavoritesTab.svelte  LaunchModal.svelte  LockScreen.svelte  QuickLoginModal.svelte  ServerBrowser.svelte  ToastContainer.svelte
src/lib/components/server-browser/: FavoritesList.svelte  GameHeader.svelte  GamesGrid.svelte  ServerList.svelte
src/lib/stores/: accounts.ts  auth.ts  favorites.ts  index.ts  launcher.ts  toasts.ts  ui.ts
src/lib/types/: roblox.ts
src/routes/: +layout.svelte  +page.svelte
